--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curd</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/indx.css">
+  
+    <link rel="stylesheet" href="../assets/css/indx.css">
 </head>
 <body>
 <!--start crud-->
