--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curd</title>
   
-    <link rel="stylesheet" href="../assets/css/indx.css">
+    <link rel="stylesheet" href="../css/indx.css">
 </head>
 <body>
 <!--start crud-->
